rust/cube/cubeplanner/tests/snapshots/dialects__duckdb_by_month.snap
---
source: cubeplanner/tests/dialects.rs
expression: "by_month(Dialect :: DuckDb).sql"
---
SELECT DATE_TRUNC('month', timezone('UTC', "orders".created_at::timestamptz)) "orders__created_at_month", count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE (created_at >= ?::timestamptz AND created_at <= ?::timestamptz) AND 1 = 1
)  AS "orders"
WHERE ("orders".created_at >= ?::timestamptz AND "orders".created_at <= ?::timestamptz)
GROUP BY 1
ORDER BY  1  ASC
