rust/cube/cubeplanner/tests/snapshots/dialects__hive_by_month.snap
---
source: cubeplanner/tests/dialects.rs
expression: "by_month(Dialect :: Hive).sql"
---
SELECT DATE_FORMAT(from_utc_timestamp(`orders`.created_at, 'UTC'), 'yyyy-MM-01 00:00:00.000') `orders__created_at_month`, count(`orders`.id) `orders__count` 
FROM  (SELECT * FROM public.orders WHERE (created_at >= from_utc_timestamp(replace(replace(?, 'T', ' '), 'Z', ''), 'UTC') AND created_at <= from_utc_timestamp(replace(replace(?, 'T', ' '), 'Z', ''), 'UTC')) AND 1 = 1
)  AS `orders`
WHERE (`orders`.created_at >= from_utc_timestamp(replace(replace(?, 'T', ' '), 'Z', ''), 'UTC') AND `orders`.created_at <= from_utc_timestamp(replace(replace(?, 'T', ' '), 'Z', ''), 'UTC'))
GROUP BY DATE_FORMAT(from_utc_timestamp(`orders`.created_at, 'UTC'), 'yyyy-MM-01 00:00:00.000')
ORDER BY  1  ASC
