rust/cube/cubeplanner/tests/snapshots/dialects__mongobi_by_month.snap
---
source: cubeplanner/tests/dialects.rs
expression: "by_month(Dialect :: MongoBi).sql"
---
SELECT CAST(DATE_FORMAT(`orders`.created_at, '%Y-%m-01T00:00:00.000') AS DATETIME) `orders__created_at_month`, count(`orders`.id) `orders__count` 
FROM  (SELECT * FROM public.orders WHERE (created_at >= TIMESTAMP(?) AND created_at <= TIMESTAMP(?)) AND 1 = 1
)  AS `orders`
WHERE (`orders`.created_at >= TIMESTAMP(?) AND `orders`.created_at <= TIMESTAMP(?))
GROUP BY 1
ORDER BY  1  ASC
